# cookiecutter-rust-package

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .bumpversion.cfg  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
{{cookiecutter.project_name}}/src/: errors.rs  {% if cookiecutter.use_clap == 'y' %}cli.rs{% endif %}
